Mon Oct 17 04:19:39 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (flo_cmp): Infinity is greater than any bignum
	  number.  [ruby-dev:38672]

	* bignum.c (rb_big_cmp): ditto.

Mon Oct 17 03:56:12 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/openssl/ossl_x509store.c (ossl_x509store_initialize): initialize
	  store->ex_data.sk.  [ruby-core:28907] [ruby-core:23971]
	  [ruby-core:18121]

Thu Jun 30 12:52:56 2011  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/tk/extconf.rb (intptr_t, uintptr_t): support for the latest ActiveTcl with mingw.

Sun Jun 26 17:52:32 2011  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>

        * ext/openssl/ossl_ssl.c: By trunk@31346, function check of SSLv2 is executed.
        However, the problem is not revised in this.
        This adds the control of using function of SSLv2 in made macro by function check.

Sun Jun 26 17:52:32 2011  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>

	* ext/openssl/extconf.rb: Should check SSLv2_*method.
	  openssl compiled with "no-ssl2" the extconf don't fail
	  when running `make' having this compilation errors.
	  Patched by Laurent Arnoud. fixes #4562, #4556

Sun Jun 26 17:46:43 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/tk/extconf.rb: copy from trunk, as requested by Hidetoshi NAGAI.

Thu Jun 23 18:38:43 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	backported r26281 from ruby_1_8

	* lib/webrick/accesslog.rb (WEBrick::AccessLog.format): log parameter
	  embedding did not work. See #4913.

	* test/webrick/test_accesslog.rb: Add for test it.

Thu Jun 16 22:55:02 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* test/test_securerandom.rb: Add testcase.  This testcase does NOT aim
	  to test cryptographically strongness and randomness.  It includes
	  the test for PID recycle issue of OpenSSL described in #4579 but
	  it's disabled by default.

Mon Jun 13 18:33:04 2011  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb (SecureRandom.random_bytes): modify PRNG state